kubernetes/apps/gitea/gitea/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
