kubernetes/apps/gitea/gitea/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  hostnames:
    - git.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gitea
          namespace: gitea
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
